--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <hr width="100%">
     <h1>Myself:</h1>
     <hr>
-    <img src="C:\Users\aniru\Desktop\Web\Ani.png" height="200px" width="250px" alt="There was supposed to be an image here??">
+    <img src="https://github.com/anirudhsuresh522001/Anirudh-Suresh/blob/main/Ani.png" height="200px" width="250px" alt="There was supposed to be an image here??">
     <hr>
     <h1>Follow on: </h1>
     <hr>
