--- a/index.html
+++ b/index.html
@@ -14,41 +14,31 @@
 <link rel="stylesheet" type="text/css" href="page1.css">
 <div>
 	<header class="hf">
-		Created on 12-11-2020.
+		<div id="centre"> Created on 12-11-2020.</div>
 	</header>
 </div>
 <body>
-    <h1>About Me:</h1>
-    <hr width="100%">
+    <div class="img"></div>
+    <img src="C:\Users\aniru\Desktop\Web\Ani.png" height="200px" width="250px" alt="There was supposed to be an image here??">
+    <h1 id="a">About Me</h1>
     <p id="intro">
-    	<big>Hello, I am <span style="color: green">Anirudh Suresh</span>. I am 19 years old and am studying Electrical and Electronics Engineering</br>             
-        at College of Engineering Trivandrum (CET), Kerala,India. I am mostly intrested in Machine Learning and </br>
-        obviously Electrical.</big>
+    	<big>Hello, I am <span style="color: orange">Anirudh Suresh</span>. I am 19 years old and doing Major in Electrical and Electronics Engineering and Minor in Machine Learning at College of Engineering Trivandrum (CET), Kerala,India. I am a hardworking and bright individual , a team player. I like to learn new things and to apply them.</big>
     </p>
-    <hr width="100%">
-    <h1>Myself:</h1>
-    <hr>
-    <img src="Ani.png" height="200px" width="250px" alt="There was supposed to be an image here??">
-    <hr>
-    <h1>Follow on: </h1>
-    <hr>
+    
+    <h1 id="b">Follow on</h1>
     <ol id="social">
     	<li><a href="https://www.linkedin.com/in/anirudh-suresh-72028518a/"><h2>Linkedin</h2></a></li>
     	<li><a href="https://github.com/anirudhsuresh522001"><h2>Github</h2></a></li>
     	<li><a href="https://www.facebook.com/anirudh.suresh.5205/"><h2>Facebook</h2></a></li>
     	<li><a href="https://www.instagram.com/anirudh_suresh_1.0/"><h2>Instagram</h2></a></li>
     </ol>
-    <hr>
-    <h1>My Contact Info:</h1>
-    <hr>
+    <h1 id="c">My Contact Info</h1>
     <div class="contact">
-    <big><span style="color:white"> Mobile:</span> 7034476152</big><br>
-    <big><span style="color:white">Email:</span> anirudhsuresh522001@gmail.com</big>
+    <big><span style="color:orange"> Mobile:</span> 7034476152</big><br>
+    <big><span style="color:orange">Email:</span> anirudhsuresh522001@gmail.com</big>
     </div>
-    <hr>
         <div class="div-table">
-    	<h1>My Academics:</h1>
-    	<hr>
+    	<h1 id="d">My Academics</h1>
     	<table>
     		<thead>
     			<th>Sn No</th>
@@ -72,14 +62,11 @@
     		</tr>
     	</table>
         </div>
-    <hr>
-    <h1>My Resume:</h1>
-    <hr>
+    <h1 id="e">My Resume</h1>
     <a href="https://drive.google.com/file/d/1aTqGIQlTUoFhB6qiA2b0stSLTDDhLSrf/view?usp=sharing"><h2>Click here</h2></a>
-    <hr> 
     <div>
     	<footer class="hf">
-    		Web Design: Anirudh Suresh
+    		<div id="centre">Web Design: Anirudh Suresh</div>
     	</footer>
     </div>
 </body>
