--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 	<header class="hf">
 		<div id="centre"> Created on 12-11-2020.</div>
 	</header>
+    <hr width="90%" >
 </div>
 <body>
     <div class="img"></div>
-    <img src="Ani.png" height="200px" width="250px" alt="There was supposed to be an image here??">
+    <img src="C:\Users\aniru\Desktop\Web\Ani.png" height="250px" width="300px" alt="There was supposed to be an image here??">
     <h1 id="a">About Me</h1>
     <p id="intro">
-    	<big>Hello, I am <span style="color: orange">Anirudh Suresh</span>. I am 19 years old and doing Major in Electrical and Electronics Engineering and Minor in Machine Learning at College of Engineering Trivandrum (CET), Kerala,India. I am a hardworking and bright individual , a team player. I like to learn new things and to apply them.</big>
+    	<big>Hello, I am <span style="color: orange">Anirudh Suresh</span>. I am 19 years old and doing Major in Electrical and Electronics Engineering and Minor in Machine Learning at College of Engineering Trivandrum (CET), Kerala,India. I am a hardworking and bright individual, a team player. I like to learn new things and to apply them.</big>
     </p>
     
     <h1 id="b">Follow on</h1>
@@ -65,6 +66,7 @@
     <h1 id="e">My Resume</h1>
     <a href="https://drive.google.com/file/d/1aTqGIQlTUoFhB6qiA2b0stSLTDDhLSrf/view?usp=sharing"><h2>Click here</h2></a>
     <div>
+        <hr width="90%">
     	<footer class="hf">
     		<div id="centre">Web Design: Anirudh Suresh</div>
     	</footer>
