--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <body>
     <div class="img"></div>
-    <img src="C:\Users\aniru\Desktop\Web\Ani.png" height="250px" width="300px" alt="There was supposed to be an image here??">
+    <img src="Ani.png" height="250px" width="300px" alt="There was supposed to be an image here??">
     <h1 id="a">About Me</h1>
     <p id="intro">
     	<big>Hello, I am <span style="color: orange">Anirudh Suresh</span>. I am 19 years old and doing Major in Electrical and Electronics Engineering and Minor in Machine Learning at College of Engineering Trivandrum (CET), Kerala,India. I am a hardworking and bright individual, a team player. I like to learn new things and to apply them.</big>
