--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     
     <h1 id="b">Follow on</h1>
     <ol id="social">
-    	<li><a href="https://www.linkedin.com/in/anirudh-suresh-72028518a/"><h2>Linkedin</h2></a></li>
-    	<li><a href="https://github.com/anirudhsuresh522001"><h2>Github</h2></a></li>
-    	<li><a href="https://www.facebook.com/anirudh.suresh.5205/"><h2>Facebook</h2></a></li>
-    	<li><a href="https://www.instagram.com/anirudh_suresh_1.0/"><h2>Instagram</h2></a></li>
+    	<li><a href="https://www.linkedin.com/in/anirudh-suresh-72028518a/" target="_blank"><h2>Linkedin</h2></a></li>
+    	<li><a href="https://github.com/anirudhsuresh522001" target="_blank"><h2>Github</h2></a></li>
+    	<li><a href="https://www.facebook.com/anirudh.suresh.5205/" target="_blank"><h2>Facebook</h2></a></li>
+    	<li><a href="https://www.instagram.com/anirudh_suresh_1.0/" target="_blank"><h2>Instagram</h2></a></li>
+	<li><a href="https://twitter.com/AnirudhSuresh18" target="_blank"><h2>Twitter</h2></a></li>    
     </ol>
     <h1 id="c">My Contact Info</h1>
     <div class="contact">
@@ -64,7 +65,7 @@
     	</table>
         </div>
     <h1 id="e">My Resume</h1>
-    <a href="https://drive.google.com/file/d/1aTqGIQlTUoFhB6qiA2b0stSLTDDhLSrf/view?usp=sharing"><h2>Click here</h2></a>
+    <a href="https://drive.google.com/file/d/1aTqGIQlTUoFhB6qiA2b0stSLTDDhLSrf/view?usp=sharing" target="_blank"><h2>Click here</h2></a>
     <div>
         <hr width="90%">
     	<footer class="hf">
