--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     		</tr>
 		</table>
         <hr width="90%">
+    <div>		
     	<footer class="hf">
     		<div id="centre">Web Design: Anirudh Suresh</div>
     	</footer>
