--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Anirudh Suresh</title>
+	<link rel="icon" href="Ani.png">
 	<style type="text/css">
 		table{
 			border:1px solid black;
