--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="Ani.png">
 	<title>Anirudh Suresh</title>
-	<link rel="icon" href="Ani.png">
-	<style type="text/css">
-		table{
-			border:1px solid black;
-		}
-		td{
-			border:1px solid black;
-		}
-	</style>
 </head>
 <link rel="stylesheet" type="text/css" href="page1.css">
 <div>
@@ -20,6 +12,7 @@
     <hr width="90%" >
 </div>
 <body>
+    <div id="runner"></div>
     <div class="img"></div>
     <img src="Ani.png" height="250px" width="300px" alt="There was supposed to be an image here??">
     <h1 id="a">About Me</h1>
@@ -28,12 +21,12 @@
     </p>
     
     <h1 id="b">Follow on</h1>
-    <ol id="social">
+    <ol>
     	<li><a href="https://www.linkedin.com/in/anirudh-suresh-72028518a/" target="_blank"><h2>Linkedin</h2></a></li>
     	<li><a href="https://github.com/anirudhsuresh522001" target="_blank"><h2>Github</h2></a></li>
     	<li><a href="https://www.facebook.com/anirudh.suresh.5205/" target="_blank"><h2>Facebook</h2></a></li>
     	<li><a href="https://www.instagram.com/anirudh_suresh_1.0/" target="_blank"><h2>Instagram</h2></a></li>
-	<li><a href="https://twitter.com/AnirudhSuresh18" target="_blank"><h2>Twitter</h2></a></li>    
+        <li><a href="https://twitter.com/AnirudhSuresh18" target="_blank"><h2>Twitter</h2></a></li>
     </ol>
     <h1 id="c">My Contact Info</h1>
     <div class="contact">
@@ -62,9 +55,10 @@
     			<td>Sem1</td>
     			<td>10</td>
     		</tr>
-		</table>
+    	</table>
+        </div>
+    <div>
         <hr width="90%">
-    <div>		
     	<footer class="hf">
     		<div id="centre">Web Design: Anirudh Suresh</div>
     	</footer>
