--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="Ani.png">
+    <link rel="icon" href="https://github.com/anirudhsuresh522001/Anirudh-Suresh/blob/main/Ani.png">
 	<title>Anirudh Suresh</title>
 </head>
-<link rel="stylesheet" type="text/css" href="page1.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/anirudhsuresh522001/Anirudh-Suresh/blob/main/page1.css">
 <div>
 	<header class="hf">
 		<div id="centre"> Created on 12-11-2020.</div>
