--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <big><span style="color:orange">Email:</span> anirudhsuresh522001@gmail.com</big>
     </div>
         <div class="div-table">
-    	<h1 id="d">My Academics</h1>
+    	/*<h1 id="d">My Academics</h1>
     	<table>
     		<thead>
     			<th>Sn No</th>
@@ -56,7 +56,7 @@
     			<td>10</td>
     		</tr>
     	</table>
-        </div>
+        </div>*/
     <div>
         <hr width="90%">
     	<footer class="hf">
